--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
-    <p>In mijn concurrentie analyse zal ik mijn aandacht vooral vestigen op de functionaliteit 
+    <p class="concurrentieintro">In mijn concurrentie analyse zal ik mijn aandacht vooral vestigen op de functionaliteit 
         van de website.
         Ik vind persoonlijk de inhoud van een website veel belangrijker dan de lay-out. 
         Natuurlijk is een aantrekkelijke lay-out ook heel belangrijk, 
@@ -19,10 +19,10 @@
         of eventueel verschillende technieken die ik voorheen niet kende op mijn eigen website toepassen.</p><hr>
 
     <h3>Mijn eerste analyse</h3>
-    <p><em>Bij mijn eerste analyse zal ik mij richten op mijn grootste concurrent: 
-        “The Colour Run festival”. Zoals ik al eerder zei heb ik mijn concept op dat van hun gebaseerd.</em></p>
+    <p>Bij mijn eerste analyse zal ik mij richten op mijn grootste concurrent: 
+        “The Colour Run festival”. Zoals ik al eerder zei heb ik mijn concept op dat van hun gebaseerd.</p>
 
-    <h4>Negatief</h4>
+    <h4 class="negatief">Negatief</h4>
     <ul>
         <li><strong>Weinig informatie</strong><br>
             Op de info pagina hebben ze het enkel over de activiteiten die op welk uur zullen plaatsvinden, 
@@ -46,7 +46,7 @@
         </li>
     </ul>
 
-    <h4>Positief</h4>
+    <h4 class="positief">Positief</h4>
     <ul>
         <li><strong>Meevolgende menubalk</strong><br>
             Wanneer je naar beneden scrolt blijft de menubalk meevolgen.<br> 
@@ -73,17 +73,17 @@
     </ul><hr>
 
     <h3>Mijn tweede analyse</h3>
-    <p><em>Mijn tweede analyse zal ik toepassen op de site van "Colour Cafe festival", 
-        omdat ze op hun festival ook de nadruk leggen op eenvoud vind ik dit wel degelijk concurrentie.</em></p>
+    <p>Mijn tweede analyse zal ik toepassen op de site van "Colour Cafe festival", 
+        omdat ze op hun festival ook de nadruk leggen op eenvoud vind ik dit wel degelijk concurrentie.</p>
 
-    <h4>Negatief</h4>
+    <h4 class="negatief">Negatief</h4>
     <p>Ik heb zo goed als geen negatieve opmerkingen over deze website. 
         Er wordt hier een goed evenwicht gemaakt tussen zowel een aantrekkelijke site als een website met 
         duidelijke en voldoende gestructureerde informatie. 
         Alles wordt in de juiste volgorde aangekaart en er zijn zo goed als geen vragen meer na het bezoeken 
         van deze website.</p>
 
-    <h4>Positief</h4>
+    <h4 class="positief">Positief</h4>
     <ul>
         <li><strong>Nieuwsoverzicht</strong><br>
             Zowel in de menubalk als op de homepagina zijn er allerlei "nieuwtjes" te vinden over het 
@@ -112,11 +112,11 @@
     </ul><hr>
 
     <h3>Mijn derde analyse</h3>
-    <p><em>Mijn derde analyse zal ik toepassen op de site van "Laundry Day festival". 
+    <p>Mijn derde analyse zal ik toepassen op de site van "Laundry Day festival". 
         Het is ook een eendagsfestival zoals mij en het heeft ook meerdere stages, 
-        dus vind ik het de moeite waard om deze website te analyseren.</em></p>
+        dus vind ik het de moeite waard om deze website te analyseren.</p>
 
-    <h4>Negatief</h4>
+    <h4 class="negatief">Negatief</h4>
     <ul>
         <li><strong>Onvoldoende informatie</strong><br>
             Je komt op een pagina terecht waar je aan de hand van een scrollbar enkel de line-up te zien krijgt. 
@@ -132,7 +132,7 @@
         </li>
     </ul>
 
-    <h4>Positief</h4>
+    <h4 class="positief">Positief</h4>
     <ul>
         <li><strong>Duidelijke info ticketverkoop</strong><br>
             De verschillende tickets worden duidelijk in een bepaalde volgorde weergegeven,
