--- a/pages/intro.html
+++ b/pages/intro.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
-    <h1>New Media Design I</h1>
+    <h1 class="NMD">New Media Design I</h1>
     <h2>COLOUR.FEST</h2>
 
     <dl class="info">
@@ -20,7 +20,7 @@
         <dt>1GMB</dt>
         <dd>1GMB</dd>
     </dl>
-    <p>
+    <p class="link">
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=97406">Mijn opdracht</a>
     </p>
     
