--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <h1>Digital Styleguide</h1>
-    <img class="one" src="images/Logo_COLOUR.FEST.jpg" alt="Logo COULOUR.FEST roze" title="Logo van mijn festival"
+    <img src="images/Logo_COLOUR.FEST.jpg" alt="Logo COULOUR.FEST roze" title="Logo van mijn festival"
     width="200" height="80" align="top"/>
 </body>
 
-<table width="200" cellpadding="3" cellspacing="5">
+<table width="200" cellpadding="3" cellspacing="5" class="table1">
     <tr>
-        <th width="150" class="one"></th>
+        <th width="150"></th>
         <th>Lettertype</th>
         <th>Grootte</th>
         <th width="150"> Regelafstand</th>
@@ -40,7 +40,7 @@
         <td>54 pt</td>
     </tr>
 </table>
-<table width="500" cellpadding="3" cellspacing="5">
+<table width="500" cellpadding="3" cellspacing="5" class="table2">
     <tr>
         <th width="150"></th>
         <th>HEX</th>
