--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -137,14 +137,18 @@
 <body>
     <div class="container_12 clearfix">
         <div id="header" class="grid_12">
-            <h1>Logo</h1>
+            <h1> <img src="images/Logo_COLOUR.FEST.jpg" alt="Logo COULOUR.FEST roze" title="Logo van mijn festival"
+                width="200" height="80" align="top"/></h1>
                 <div id="nav">
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Products</a></li>
-                        <li><a href"">Services</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="intro.html">Intro</a></li>
+                        <li><a href="concurrentie.html">Analyse</a></li>
+                        <li><a href="scenarios.html">Scenario</a></li>
+                        <li><a href="ideaboard.pdf">Ideaboard</a></li>
+                        <li><a href="sitemap.pdf">Sitemap</a></li>
+                        <li><a href="wireframes.pdf">Wireframes</a></li>
+                        <li><a href="style-tile.pdf">Style tile</a></li>
+                        <li><a href="visual-designs.pdf">Visual design</a></li>
                     </ul>
                 </div>
         </div>
@@ -153,10 +157,61 @@
         <p>Feature</p>
     </div>
     <div class="article grid_4">
-        <p>Column One</p>
+        <p>Knoppen</p>
+            <form action="http://www.example.com/login.php" class="form1">
+                <p>Gebruikersnaam:
+                <input type="text" name="gebruikersnaam" size="15" maxlength="30"/>
+                </p>
+                <p>Wachtwoord:
+                <input type="wachtwoord" name="wachtwoord" size="15" maxlength="30"/>
+                 </p>
+            </form>
+            <form action="https://www.example.com/comments.php" class="form2">
+                <p>Hebt u nog vragen? Indien ja, kunt u ze hieronder stellen.</p>
+                <textarea name="comments cols="20" rows="4">Stel uw vraag...</textarea>
+            </form>
+            <form action="https://www.example.com/profile.php" class="form3">
+                <p>Selecteer uw favoriete platform om muziek te beluisteren:
+                <br/>
+                    <input type="checkbox" name="service" value="itunes" checked="checked"/> iTunes
+                    <input type="checkbox" name="service" value="spotify"/> Spotify
+                    <input type="checkbox" name="service" value="youtube"/> YouTube
+                </p>
+            </form>
+            <form action="http://www.example.org/subscribe.php" class="form4">
+                <p>Schrijf je in voor onze nieuwbrief:</p>
+                    <input type="text" name="email"/>
+                    <input type="image" src="images/subscribe.jpg" width="100" height="20"/>
+            </form>
     </div>
     <div class="article grid_4">
-        <p>Column Two</p>
+        <p>Kleuren</p>
+        <table width="500" cellpadding="3" cellspacing="5" class="table1">
+                <tr>
+                    <th width="400"></th>
+                    <th>Lettertype</th>
+                    <th>Grootte</th>
+                    <th width="150"> Regelafstand</th>
+                </tr>
+                <tr>
+                    <th>Tekst</th>
+                    <td class="extralight">Oswald ExtraLight</td>
+                    <td>14 pt</td>
+                    <td>16 pt</td>
+                </tr>
+                <tr>
+                    <th>Logo, tussentitels</th>
+                    <td class="light">Oswald Light</td>
+                    <td>35 pt</td>
+                    <td>42 pt</td>
+                </tr>
+                <tr>
+                    <th>Titels</th>
+                    <td class="regular">Oswald Regular</td>
+                    <td>45 pt</td>
+                    <td>54 pt</td>
+                </tr>
+        </table>
     </div>
     <div class="article grid_4">
         <p>Column Three</p>
