--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -10,129 +10,7 @@
 </head>
 <body>
     <h1>Digital Styleguide</h1>
-    <img src="images/Logo_COLOUR.FEST.jpg" alt="Logo COULOUR.FEST roze" title="Logo van mijn festival"
-    width="200" height="80" align="top"/>
 </body>
-
-<table width="500" cellpadding="3" cellspacing="5" class="table1">
-    <tr>
-        <th width="400"></th>
-        <th>Lettertype</th>
-        <th>Grootte</th>
-        <th width="150"> Regelafstand</th>
-    </tr>
-    <tr>
-        <th>Tekst</th>
-        <td class="extralight">Oswald ExtraLight</td>
-        <td>14 pt</td>
-        <td>16 pt</td>
-    </tr>
-    <tr>
-        <th>Logo, tussentitels</th>
-        <td class="light">Oswald Light</td>
-        <td>35 pt</td>
-        <td>42 pt</td>
-    </tr>
-    <tr>
-        <th>Titels</th>
-        <td class="regular">Oswald Regular</td>
-        <td>45 pt</td>
-        <td>54 pt</td>
-    </tr>
-</table>
-<table width="500" cellpadding="3" cellspacing="5" class="table2">
-    <tr>
-        <th width="150"></th>
-        <th>HEX</th>
-        <th>RGB</th>
-        <th>HSL</th>
-    </tr>
-    <tr>
-        <th class="kleur1">1<sup>ste</sup> kleur</th>
-        <td>#d268d9</td>
-        <td>(210, 104, 217)</td>
-        <td>(296, 59.8%, 62.9%)</td>
-    </tr>
-    <tr>
-        <th class="kleur2">2<sup>de</sup> kleur</th>
-        <td>#d2c9df</td>
-        <td>(210, 201, 223)</td>
-        <td>(265, 25.6%, 83.1%)</td>
-    </tr>
-    <tr>
-        <th class="kleur3">3<sup>de</sup> kleur</th>
-        <td>#817298</td>
-        <td>(129, 114, 152)</td>
-        <td>(264, 15.6%, 52.2%)</td>
-    </tr>
-    <tr>
-        <th class="kleur4">4<sup>de</sup> kleur</th>
-        <td>#85677d</td>
-        <td>(133, 103, 125)</td>
-        <td>(316, 12.7%, 46.3%)</td>
-    </tr>
-    <tr>
-        <th class="kleur5">5<sup>de</sup> kleur</th>
-        <td>#b194f3</td>
-        <td>(177, 148, 243)</td>
-        <td>(258, 79.8%, 76.7%)</td>
-    </tr>
-    <tr>
-        <th class="kleur6">6<sup>de</sup> kleur</th>
-        <td>#f5c9df</td>
-        <td>(245, 201, 223)</td>
-        <td>(330, 68.8%, 87.5%)</td>
-    </tr>
-</table>
-
-<head>
-    <title>Forms</title>
-</head>
-<body>
-    <form action="http://www.example.com/login.php">
-        <p>Gebruikersnaam:
-            <input type="text" name="gebruikersnaam" size="15" maxlength="30"/>
-        </p>
-         <p>Wachtwoord:
-            <input type="wachtwoord" name="wachtwoord" size="15" maxlength="30"/>
-        </p>
-    </form>
-    <form action="https://www.example.com/comments.php">
-        <p>Hebt u nog vragen? Indien ja, kunt u ze hieronder stellen.</p>
-            <textarea name="comments cols="20" rows="4">Stel uw vraag...</textarea>
-    </form>
-    <form action="https://www.example.com/profile.php">
-        <p>Selecteer uw favoriete platform om muziek te beluisteren:
-        <br/>
-            <input type="checkbox" name="service" value="itunes" checked="checked"/> iTunes
-            <input type="checkbox" name="service" value="spotify"/> Spotify
-            <input type="checkbox" name="service" value="youtube"/> YouTube
-        </p>
-    </form>
-    <form action="http://www.example.org/subscribe.php">
-        <p>Schrijf je in voor onze nieuwbrief:</p>
-            <input type="text" name="email"/>
-            <input type="image" src="images/subscribe.jpg" width="100" height="20"/>
-    </form>
-</body>
-<head>
-        <title>Frames</title>
-</head>
-<body>
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2516.558754780109!2d4.339294015747543!3d50.894876529539154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c24a049b5221%3A0xa424f50808ffc705!2sAtomium%2C+1020+Brussel!5e0!3m2!1snl!2sbe!4v1526735390343" width="400" height="250" frameborder="0" style="border:0" allowfullscreen>
-    </iframe>
-    <iframe width="400" height="200" src="https://www.youtube.com/embed/2Vv-BfVoq4g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-    </iframe>
-</body>
-<a href="https://www.delijn.be/nl/" target="_blank"> De lijn </a>
-<a href="http://www.belgianrail.be/nl/Home.aspx" target="_blank"> NMBS</a>
-
-<head>
-    <title>Grid layout</title>
-    <link rel="stylesheet" type="text/css"
-        href="css/960_12_col.css"/>
-    <style>See the right hand page</style>
 </head>
 <body>
     <div class="container_12 clearfix">
@@ -185,10 +63,10 @@
             </form>
     </div>
     <div class="article grid_4">
-        <p>Kleuren</p>
-        <table width="500" cellpadding="3" cellspacing="5" class="table1">
+        <p>Lettertype en kleur</p>
+        <table width="800" cellpadding="1" cellspacing="0" class="table1">
                 <tr>
-                    <th width="400"></th>
+                    <th width="45"></th>
                     <th>Lettertype</th>
                     <th>Grootte</th>
                     <th width="150"> Regelafstand</th>
@@ -212,9 +90,60 @@
                     <td>54 pt</td>
                 </tr>
         </table>
+        <table width="500" cellpadding="3" cellspacing="5" class="table2">
+                <tr>
+                    <th width="100"></th>
+                    <th>HEX</th>
+                    <th>RGB</th>
+                    <th>HSL</th>
+                </tr>
+                <tr>
+                    <th class="kleur1">1<sup>ste</sup> kleur</th>
+                    <td>#d268d9</td>
+                    <td>(210, 104, 217)</td>
+                    <td>(296, 59.8%, 62.9%)</td>
+                </tr>
+                <tr>
+                    <th class="kleur2">2<sup>de</sup> kleur</th>
+                    <td>#d2c9df</td>
+                    <td>(210, 201, 223)</td>
+                    <td>(265, 25.6%, 83.1%)</td>
+                </tr>
+                <tr>
+                    <th class="kleur3">3<sup>de</sup> kleur</th>
+                    <td>#817298</td>
+                    <td>(129, 114, 152)</td>
+                    <td>(264, 15.6%, 52.2%)</td>
+                </tr>
+                <tr>
+                    <th class="kleur4">4<sup>de</sup> kleur</th>
+                    <td>#85677d</td>
+                    <td>(133, 103, 125)</td>
+                    <td>(316, 12.7%, 46.3%)</td>
+                </tr>
+                <tr>
+                    <th class="kleur5">5<sup>de</sup> kleur</th>
+                    <td>#b194f3</td>
+                    <td>(177, 148, 243)</td>
+                    <td>(258, 79.8%, 76.7%)</td>
+                </tr>
+                <tr>
+                    <th class="kleur6">6<sup>de</sup> kleur</th>
+                    <td>#f5c9df</td>
+                    <td>(245, 201, 223)</td>
+                    <td>(330, 68.8%, 87.5%)</td>
+                </tr>
+            </table>
     </div>
     <div class="article grid_4">
-        <p>Column Three</p>
+        <p>Links</p>
+        <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2516.558754780109!2d4.339294015747543!3d50.894876529539154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c24a049b5221%3A0xa424f50808ffc705!2sAtomium%2C+1020+Brussel!5e0!3m2!1snl!2sbe!4v1526735390343" width="400" height="250" frameborder="0" style="border:0" allowfullscreen>
+        </iframe>
+        <iframe width="400" height="200" src="https://www.youtube.com/embed/2Vv-BfVoq4g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+        </iframe>
+        <a class="link1" href="https://www.delijn.be/nl/" target="_blank"> De lijn </a><br>
+        <a class="link2" href="http://www.belgianrail.be/nl/Home.aspx" target="_blank"> NMBS</a>
     </div>
     <div id="footer" class="grid_12">
         <p>Copyright 2011</p>
