--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -19,23 +19,23 @@
                 width="200" height="80" align="top"/></h1>
                 <div id="nav">
                     <ul>
-                        <li><a href="intro.html">Intro</a></li>
-                        <li><a href="concurrentie.html">Analyse</a></li>
-                        <li><a href="scenarios.html">Scenario</a></li>
-                        <li><a href="ideaboard.pdf">Ideaboard</a></li>
-                        <li><a href="sitemap.pdf">Sitemap</a></li>
-                        <li><a href="wireframes.pdf">Wireframes</a></li>
-                        <li><a href="style-tile.pdf">Style tile</a></li>
-                        <li><a href="visual-designs.pdf">Visual design</a></li>
+                        <li class="lijstvg"><a href="intro.html">Intro</a></li>
+                        <li class="lijstvg"><a href="concurrentie.html">Analyse</a></li>
+                        <li class="lijstvg"><a href="scenarios.html">Scenario</a></li>
+                        <li class="lijstvg"><a href="ideaboard.pdf">Ideaboard</a></li>
+                        <li class="lijstvg"><a href="sitemap.pdf">Sitemap</a></li>
+                        <li class="lijstvg"><a href="wireframes.pdf">Wireframes</a></li>
+                        <li class="lijstvg"><a href="style-tile.pdf">Style tile</a></li>
+                        <li class="lijstvg"><a href="visual-designs.pdf">Visual design</a></li>
                     </ul>
                 </div>
         </div>
     </div>
     <div id="feature" class="grid_12">
-        <p>Feature</p>
+        <p class="vijf">Feature</p>
     </div>
     <div class="article grid_4">
-        <p>Knoppen</p>
+        <p class="vijf">Knoppen</p>
             <form action="http://www.example.com/login.php" class="form1">
                 <p>Gebruikersnaam:
                 <input type="text" name="gebruikersnaam" size="15" maxlength="30"/>
@@ -63,7 +63,7 @@
             </form>
     </div>
     <div class="article grid_4">
-        <p>Lettertype en kleur</p>
+        <p class="vijf">Lettertype en kleur</p>
         <table width="800" cellpadding="1" cellspacing="0" class="table1">
                 <tr>
                     <th width="45"></th>
@@ -136,7 +136,7 @@
             </table>
     </div>
     <div class="article grid_4">
-        <p>Links</p>
+        <p class="vijf">Links</p>
         <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2516.558754780109!2d4.339294015747543!3d50.894876529539154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c24a049b5221%3A0xa424f50808ffc705!2sAtomium%2C+1020+Brussel!5e0!3m2!1snl!2sbe!4v1526735390343" width="400" height="250" frameborder="0" style="border:0" allowfullscreen>
         </iframe>
