--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -19,8 +19,9 @@
         of eventueel verschillende technieken die ik voorheen niet kende op mijn eigen website toepassen.</p><hr>
 
     <h3>Mijn eerste analyse</h3>
-    <p>Bij mijn eerste analyse zal ik mij richten op mijn grootste concurrent: 
-        “The Colour Run festival”. Zoals ik al eerder zei heb ik mijn concept op dat van hun gebaseerd.</p>
+    <p>Bij mijn eerste analyse zal ik mij richten op mijn grootste concurrent:
+            <a href="http://thecolorrun.co.nl/">The Color Run Festival.</a>
+            Zoals ik al eerder zei heb ik mijn concept op dat van hun gebaseerd.</p>
 
     <h4 class="negatief">Negatief</h4>
     <ul>
@@ -73,7 +74,7 @@
     </ul><hr>
 
     <h3>Mijn tweede analyse</h3>
-    <p>Mijn tweede analyse zal ik toepassen op de site van "Colour Cafe festival", 
+    <p>Mijn tweede analyse zal ik toepassen op de site van <a href="https://www.couleurcafe.be/nl/">Couleur Cafe</a>, 
         omdat ze op hun festival ook de nadruk leggen op eenvoud vind ik dit wel degelijk concurrentie.</p>
 
     <h4 class="negatief">Negatief</h4>
@@ -112,7 +113,7 @@
     </ul><hr>
 
     <h3>Mijn derde analyse</h3>
-    <p>Mijn derde analyse zal ik toepassen op de site van "Laundry Day festival". 
+    <p>Mijn derde analyse zal ik toepassen op de site van <a href="https://www.laundryday.be/">Laundry Day.</a> 
         Het is ook een eendagsfestival zoals mij en het heeft ook meerdere stages, 
         dus vind ik het de moeite waard om deze website te analyseren.</p>
 
