--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -1,152 +1,23 @@
 <!DOCTYPE html>
 <html lang="nl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Digital Styleguide - Eindopdracht NMD-I</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/pages.css">
-</head>
-<body>
-    <h1>Digital Styleguide</h1>
-</body>
-</head>
-<body>
-    <div class="container_12 clearfix">
-        <div id="header" class="grid_12">
-            <h1> <img src="images/Logo_COLOUR.FEST.jpg" alt="Logo COULOUR.FEST roze" title="Logo van mijn festival"
-                width="200" height="80" align="top"/></h1>
-                <div id="nav">
-                    <ul>
-                        <li class="lijstvg"><a href="intro.html">Intro</a></li>
-                        <li class="lijstvg"><a href="concurrentie.html">Analyse</a></li>
-                        <li class="lijstvg"><a href="scenarios.html">Scenario</a></li>
-                        <li class="lijstvg"><a href="ideaboard.pdf">Ideaboard</a></li>
-                        <li class="lijstvg"><a href="sitemap.pdf">Sitemap</a></li>
-                        <li class="lijstvg"><a href="wireframes.pdf">Wireframes</a></li>
-                        <li class="lijstvg"><a href="style-tile.pdf">Style tile</a></li>
-                        <li class="lijstvg"><a href="visual-designs.pdf">Visual design</a></li>
-                    </ul>
-                </div>
-        </div>
-    </div>
-    <div id="feature" class="grid_12">
-        <p class="vijf">Feature</p>
-    </div>
-    <div class="article grid_4">
-        <p class="vijf">Knoppen</p>
-            <form action="http://www.example.com/login.php" class="form1">
-                <p>Gebruikersnaam:
-                <input type="text" name="gebruikersnaam" size="15" maxlength="30"/>
-                </p>
-                <p>Wachtwoord:
-                <input type="wachtwoord" name="wachtwoord" size="15" maxlength="30"/>
-                 </p>
-            </form>
-            <form action="https://www.example.com/comments.php" class="form2">
-                <p>Hebt u nog vragen? Indien ja, kunt u ze hieronder stellen.</p>
-                <textarea name="comments cols="20" rows="4">Stel uw vraag...</textarea>
-            </form>
-            <form action="https://www.example.com/profile.php" class="form3">
-                <p>Selecteer uw favoriete platform om muziek te beluisteren:
-                <br/>
-                    <input type="checkbox" name="service" value="itunes" checked="checked"/> iTunes
-                    <input type="checkbox" name="service" value="spotify"/> Spotify
-                    <input type="checkbox" name="service" value="youtube"/> YouTube
-                </p>
-            </form>
-            <form action="http://www.example.org/subscribe.php" class="form4">
-                <p>Schrijf je in voor onze nieuwbrief:</p>
-                    <input type="text" name="email"/>
-                    <input type="image" src="images/subscribe.jpg" width="100" height="20"/>
-            </form>
-    </div>
-    <div class="article grid_4">
-        <p class="vijf">Lettertype en kleur</p>
-        <table width="800" cellpadding="1" cellspacing="0" class="table1">
-                <tr>
-                    <th width="45"></th>
-                    <th>Lettertype</th>
-                    <th>Grootte</th>
-                    <th width="150"> Regelafstand</th>
-                </tr>
-                <tr>
-                    <th>Tekst</th>
-                    <td class="extralight">Oswald ExtraLight</td>
-                    <td>14 pt</td>
-                    <td>16 pt</td>
-                </tr>
-                <tr>
-                    <th>Logo, tussentitels</th>
-                    <td class="light">Oswald Light</td>
-                    <td>35 pt</td>
-                    <td>42 pt</td>
-                </tr>
-                <tr>
-                    <th>Titels</th>
-                    <td class="regular">Oswald Regular</td>
-                    <td>45 pt</td>
-                    <td>54 pt</td>
-                </tr>
-        </table>
-        <table width="500" cellpadding="3" cellspacing="5" class="table2">
-                <tr>
-                    <th width="100"></th>
-                    <th>HEX</th>
-                    <th>RGB</th>
-                    <th>HSL</th>
-                </tr>
-                <tr>
-                    <th class="kleur1">1<sup>ste</sup> kleur</th>
-                    <td>#d268d9</td>
-                    <td>(210, 104, 217)</td>
-                    <td>(296, 59.8%, 62.9%)</td>
-                </tr>
-                <tr>
-                    <th class="kleur2">2<sup>de</sup> kleur</th>
-                    <td>#d2c9df</td>
-                    <td>(210, 201, 223)</td>
-                    <td>(265, 25.6%, 83.1%)</td>
-                </tr>
-                <tr>
-                    <th class="kleur3">3<sup>de</sup> kleur</th>
-                    <td>#817298</td>
-                    <td>(129, 114, 152)</td>
-                    <td>(264, 15.6%, 52.2%)</td>
-                </tr>
-                <tr>
-                    <th class="kleur4">4<sup>de</sup> kleur</th>
-                    <td>#85677d</td>
-                    <td>(133, 103, 125)</td>
-                    <td>(316, 12.7%, 46.3%)</td>
-                </tr>
-                <tr>
-                    <th class="kleur5">5<sup>de</sup> kleur</th>
-                    <td>#b194f3</td>
-                    <td>(177, 148, 243)</td>
-                    <td>(258, 79.8%, 76.7%)</td>
-                </tr>
-                <tr>
-                    <th class="kleur6">6<sup>de</sup> kleur</th>
-                    <td>#f5c9df</td>
-                    <td>(245, 201, 223)</td>
-                    <td>(330, 68.8%, 87.5%)</td>
-                </tr>
-            </table>
-    </div>
-    <div class="article grid_4">
-        <p class="vijf">Links</p>
-        <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2516.558754780109!2d4.339294015747543!3d50.894876529539154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c24a049b5221%3A0xa424f50808ffc705!2sAtomium%2C+1020+Brussel!5e0!3m2!1snl!2sbe!4v1526735390343" width="400" height="250" frameborder="0" style="border:0" allowfullscreen>
-        </iframe>
-        <iframe width="400" height="200" src="https://www.youtube.com/embed/2Vv-BfVoq4g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-        </iframe>
-        <a class="link1" href="https://www.delijn.be/nl/" target="_blank"> De lijn </a><br>
-        <a class="link2" href="http://www.belgianrail.be/nl/Home.aspx" target="_blank"> NMBS</a>
-    </div>
-    <div id="footer" class="grid_12">
-        <p>Copyright 2011</p>
-    </div><!--.container_12-->
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Digital Styleguide - Eindopdracht NMD-I</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+        <link rel="stylesheet" href="css/pages.css">
+    </head>
+    <body>
+        <h1>Digital Styleguide</h1>
+        <img class="one" src="images/Logo_COLOUR.FEST.jpg" alt="Logo" width="150" height="60"/>
+        <h4>Kleurstaal</h4>
+        <h3>Hoofdkleur</h3>
+        <p class="one"> #d268d9 (296, 59.8%, 62.9%) (210, 104, 217)</p>
+        <p class="two"> #d2c9df (265, 25.6%, 83.1%) (210, 201, 223)</p>
+        <p class="three"> #817298 (264, 15.6%, 52.3%) (129, 114, 152)</p>
+        <p class="four"> #85677d (316, 12.7%, 46.3%) (133, 103, 125)</p>
+        <p class="five"> #b194f3 (258, 79.8%, 76,7%) (177, 148, 243)</p>
+        <p class="six"> #f5c9df (330, 68.8%, 87.5%) (245, 201, 223)</p>
+    </body>
 </html>
