--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -12,39 +12,39 @@
         <h1>Digital Styleguide</h1><hr>
         <img class="one" src="images/Logo_COLOUR.FEST.jpg" alt="Logo" width="150" height="60"/>
         <h4 class="kleurstaal">Kleurstaal</h4>
-        <p class="kleur1"> #d268d9 | (296, 59.8%, 62.9%) | (210, 104, 217)</p>
-        <p class="kleur2"> #d2c9df | (265, 25.6%, 83.1%) | (210, 201, 223)</p>
-        <p class="kleur3"> #817298 | (264, 15.6%, 52.3%) | (129, 114, 152)</p>
-        <p class="kleur4"> #85677d | (316, 12.7%, 46.3%) | (133, 103, 125)</p>
-        <p class="kleur5"> #b194f3 | (258, 79.8%, 76,7%) | (177, 148, 243)</p>
-        <p class="kleur6"> #f5c9df | (330, 68.8%, 87.5%) | (245, 201, 223)</p>
+            <p class="kleur1"> #d268d9 | (296, 59.8%, 62.9%) | (210, 104, 217)</p>
+            <p class="kleur2"> #d2c9df | (265, 25.6%, 83.1%) | (210, 201, 223)</p>
+            <p class="kleur3"> #817298 | (264, 15.6%, 52.3%) | (129, 114, 152)</p>
+            <p class="kleur4"> #85677d | (316, 12.7%, 46.3%) | (133, 103, 125)</p>
+            <p class="kleur5"> #b194f3 | (258, 79.8%, 76,7%) | (177, 148, 243)</p>
+            <p class="kleur6"> #f5c9df | (330, 68.8%, 87.5%) | (245, 201, 223)</p>
 
         <h4 class="lettertype">Lettertype</h4>
-        <p class="lettertype1">Titels: Oswald Regular, 30pt/36pt</p>
-        <p class="lettertype2">Ondertitels: Oswald Light, 20pt/24pt</p>
-        <p class="lettertype3">Tekst: Oswald ExtraLight, 12pt/15pt</p>
+            <p class="lettertype1">Titels: Oswald Regular, 30pt/36pt</p>
+            <p class="lettertype2">Ondertitels: Oswald Light, 20pt/24pt</p>
+            <p class="lettertype3">Tekst: Oswald ExtraLight, 12pt/15pt</p>
 
         <h4 class="knoppen">Knoppen</h4>
-        <form class="knop1" action="https://www.example.com/login.php">
-            <p>Al reeds geregistreerd?</p>
-            <p>Gebruiksnaam:
-                <input type="text" name="gebruiksnaam" size="20" maxlength="35"/>
-            </p>
-            <p>Wachtwoord:
-                <input type="wachtwoord" name="wachtwoord" size="20" maxlength="35"/>
-            </p>
-        </form>
-        <form class="knop2" action="http://www.example.com/subscribe.php">
-            <p>Schrijf je hier in voor onze maandelijkse nieuwsbrief:</p>
-            <input type="text" name="nieuwsbrief"/>
-            <input type="submit" name="Ga door" value="Schrijf je hier in"/>
-        </form>
+            <form class="knop1" action="https://www.example.com/login.php">
+                <p>Al reeds geregistreerd?</p>
+                <p>Gebruiksnaam:
+                    <input type="text" name="gebruiksnaam" size="20" maxlength="35"/>
+                </p>
+                <p>Wachtwoord:
+                    <input type="wachtwoord" name="wachtwoord" size="20" maxlength="35"/>
+                </p>
+            </form>
+            <form class="knop2" action="http://www.example.com/subscribe.php">
+                <p>Schrijf je hier in voor onze maandelijkse nieuwsbrief:</p>
+                <input type="text" name="nieuwsbrief"/>
+                <input type="submit" name="Ga door" value="Schrijf je hier in"/>
+            </form>
 
         <h4 class="stijlen">Linken stijlen</h4>
-            <a href="intro.html">Link</a>
-            <a href="concurrentie.html">Visited</a>
-            <a href="scenarios.html">Hover</a>
-            <a href="ideaboard.pdf">Active</a>
-            <a href="sitemap.pdf">Focus</a>
+            <p class="stijl1"> Link</p>
+            <p class="stijl2"> Hover</p>
+            <p class="stijl3"> Visited</p>
+            <p class="stijl4"> Active</p>
+            <p class="stijl5"> Focous</p>
     </body>
 </html>
